<resources>
    <string name="app_name">Eat Me</string>
    <string name="notification_channel_id" translatable="false">push_notification_id</string>
    <string name="suggestion_question">What to cook?</string>
    <string name="main_course">Main Course</string>
    <string name="find_recipe">Find Recipe</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="saved">Saved</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="marinade">Marinade</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="language">Language</string>
    <string name="key_language" translatable="false">languageKey</string>
    <string name="keyMenu" translatable="false">keyMenu</string>
    <string name="filter">Filter</string>
    <string name="menu">Menu</string>
    <string name="empty_save_recipe">Oh no, you have no saved recipe.</string>
    <string name="image_detail_ingredient">Image detail ingredient</string>
    <string name="image_recipe">Image recipe</string>
    <string name="kcal">Kcal</string>
    <string name="time">Time</string>
    <string name="delete">Delete</string>
    <string name="min">min</string>
    <string name="user">user</string>
    <string name="view_reply">View reply</string>
    <string name="reply">Reply</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="kcal_lowercase">kcal</string>
    <string name="protein">protein</string>
    <string name="fat">fat</string>
    <string name="carbs">carbs</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="comments">Comments</string>
    <string name="be_first_to_comment">Be first to comment</string>
    <string name="what_do_you_think">What do you think…?</string>
    <string name="send">Send</string>
    <string-array name="languages">
        <item>English</item>
        <item>한국어</item>
    </string-array>
    <string-array name="languages_value">
        <item>en</item>
        <item>ko</item>
    </string-array>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_up">Sign up</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">User name</string>
    <string name="a_recipe_has_no_soul_you_must_bring_soul_to_the_recipe">A recipe has no soul. You must bring soul to the recipe.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="new_user_sign_up_here">New user ? Sign up here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_uppercase">FORGOT PASSWORD</string>
    <string name="we_just_need_registered_email_to_send_your_password_reset">We just need registered email to send your password reset</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="meal_type">Meal Type</string>
    <string name="more">More</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>
    <string name="diet">Diet</string>
    <string name="calories">Calories</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="loading">Loading…</string>
    <string name="suitable">Suitable</string>
    <string name="popularity">Popularity</string>
    <string name="healthiness">Healthiness</string>
    <string name="we_can_t_found_any_recipe">We can\'t found any recipe.</string>
    <string name="have_an_account_sign_in_here">Have an account? Sign in here</string>
    <string name="oops_you_want_to_create_an_account">Oops ! You want to create an account?</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="search">Search…</string>
    <string name="error">An error occurred.</string>
    <string name="unliked">Unliked</string>
    <string name="saved_cap">Saved</string>
    <string name="replying">Replying</string>
    <string name="deleted">Deleted</string>
    <string name="my_recipes">My recipes</string>
</resources>