<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_root">
    <Preference
        android:key="@string/keyMenu"
        android:layout="@layout/layout_custom_preference" />
    <PreferenceCategory
        android:icon="@drawable/ic_language"
        android:title="Language">
        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/language"
            android:entries="@array/languages"
            android:entryValues="@array/languages_value"
            android:key="@string/key_language"
            android:title="@string/language" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Polus">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="+10 polus project"
            android:summary="+10 polus vì leader đanh đá"
            android:title="+10 polus project" />
    </PreferenceCategory>

</PreferenceScreen>